Anonymous | Login | 2021-01-15 21:07 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0030347 | Open CASCADE | [OCCT] OCCT:Mesh | public | 2018-11-06 18:41 | 2018-11-11 12:01 | ||||
Reporter | kgv | ||||||||
Assigned To | bugmaster | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 7.4.0 | ||||||||
Target Version | [OCCT] 7.4.0 | Fixed in Version | [OCCT] 7.4.0 | ||||||
Summary | 0030347: [REGRESSION] Mesh, BRepMesh_ModelPostProcessor - NCollection_Array1 throws Standard_RangeError | ||||||||
Description | Method PolygonCommitter::collectPolygon() called by BRepMesh_ModelPostProcessor throws Standard_RangeError exception for a curve having 0 number of parametersHandle(Poly_PolygonOnTriangulation) collectPolygon( const IMeshData::IPCurveHandle& thePCurve, const Standard_Real theDeflection) const { TColStd_Array1OfInteger aNodes (1, thePCurve->ParametersNb()); TColStd_Array1OfReal aParams(1, thePCurve->ParametersNb()); as reproduced by bugs/moddata_2/bug428 test case in DEBUG build or with No_Exception undefined. This is a regression since 0026106. | ||||||||
Steps To Reproduce | bugs moddata_2 bug428 | ||||||||
Tags | No tags attached. | ||||||||
Test case number | bugs moddata_2 bug428 | ||||||||
Attached Files | |||||||||
![]() |
|
(0080805) oan (developer) 2018-11-07 10:58 |
IMHO, curves with no parameters should not be added to data model at all. These could be the edges without pcurves or degenerated ones. |
(0080809) msv (developer) 2018-11-07 11:27 |
Degenerated edges must be processed in order to close 2d contour. |
(0080810) oan (developer) 2018-11-07 11:31 |
Yes, you are correct regarding truly degenerated ones. But, here "degenerated" means edge with no points on curves. If there is no points at all, then even end points (vertices) have not been added. |
(0080819) git (administrator) 2018-11-07 13:25 |
Branch CR30347 has been created by nbv. SHA-1: 52f9517856b52915b68b15deff21592ec50a8c99 Detailed log of new commits: Author: nbv Date: Wed Nov 7 13:22:42 2018 +0300 0030347: [REGRESSION] Mesh, BRepMesh_ModelPostProcessor - NCollection_Array1 throws Standard_RangeError Obtaining of 3D-polygon is forbidden for degenerated edges |
(0080823) git (administrator) 2018-11-07 13:56 |
Branch CR30347 has been updated forcibly by nbv. SHA-1: d2a987bcca223eb33a250d6800960c894bcb6425 |
(0080830) nbv (developer) 2018-11-07 15:38 |
Dear Mikhail, Please review the branch CR30347. Test results are here: http://jenkins-test-12.nnov.opencascade.com/view/CR30347-master_NBV/ [^] |
(0080842) msv (developer) 2018-11-07 16:09 |
Reviewed. |
(0080884) bugmaster (administrator) 2018-11-07 17:59 |
Combination - OCCT branch : CR30347 SHA - d2a987bcca223eb33a250d6800960c894bcb6425 Products branch : master SHA - 4525a60ddf97fbcad482f1351d777d1e352a8307 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16124.880000000001 / 16093.030000000039 [+0.20%] Products Total CPU difference: 7061.170000000032 / 7035.140000000028 [+0.37%] Windows-64-VC14: OCCT Total CPU difference: 17614.578125 / 17600.625 [+0.08%] Products Total CPU difference: 8515.90625 / 8526.203125 [-0.12%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0081036) git (administrator) 2018-11-11 12:01 |
Branch CR30347 has been deleted by inv. SHA-1: d2a987bcca223eb33a250d6800960c894bcb6425 |
![]() |
|||
occt: master c3ca03eb
Timestamp: 2018-11-07 10:22:42 Author: nbv Committer: bugmaster [ Details ] [ Diff ] |
0030347: Mesh, BRepMesh_ModelPostProcessor - NCollection_Array1 throws Standard_RangeError Obtaining of 3D-polygon is forbidden for not discretized edge. |
||
mod - src/BRepMesh/BRepMesh_ModelPostProcessor.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2018-11-06 18:41 | kgv | New Issue | |
2018-11-06 18:41 | kgv | Assigned To | => oan |
2018-11-06 18:41 | kgv | Relationship added | child of 0026106 |
2018-11-06 18:42 | kgv | Relationship added | related to 0029181 |
2018-11-06 18:42 | kgv | Description Updated | View Revisions |
2018-11-07 10:58 | oan | Note Added: 0080805 | |
2018-11-07 10:58 | nbv | Assigned To | oan => nbv |
2018-11-07 10:58 | nbv | Status | new => assigned |
2018-11-07 11:27 | msv | Note Added: 0080809 | |
2018-11-07 11:31 | oan | Note Added: 0080810 | |
2018-11-07 13:25 | git | Note Added: 0080819 | |
2018-11-07 13:56 | git | Note Added: 0080823 | |
2018-11-07 15:38 | nbv | Note Added: 0080830 | |
2018-11-07 15:38 | nbv | Assigned To | nbv => msv |
2018-11-07 15:38 | nbv | Status | assigned => resolved |
2018-11-07 16:09 | msv | Note Added: 0080842 | |
2018-11-07 16:09 | msv | Assigned To | msv => bugmaster |
2018-11-07 16:09 | msv | Status | resolved => reviewed |
2018-11-07 17:55 | bugmaster | Test case number | => bugs moddata_2 bug428 |
2018-11-07 17:59 | bugmaster | Note Added: 0080884 | |
2018-11-07 17:59 | bugmaster | Status | reviewed => tested |
2018-11-11 11:52 | bugmaster | Changeset attached | => occt master c3ca03eb |
2018-11-11 11:52 | bugmaster | Status | tested => verified |
2018-11-11 11:52 | bugmaster | Resolution | open => fixed |
2018-11-11 12:01 | git | Note Added: 0081036 |
Copyright © 2000 - 2021 MantisBT Team |