0030347: Mesh, BRepMesh_ModelPostProcessor - NCollection_Array1 throws Standard_RangeError

Obtaining of 3D-polygon is forbidden for not discretized edge.